"Repairable" text overflows badge

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19913,7 +19913,6 @@ td.col-device-auto {
 
 .table-repair .badge {
   margin-right: 8px;
-  width: 60px;
 }
 
 .table-repair .repair_status .badge {
